@@ -201,7 +201,7 @@ par une meilleure interpr&eacute;tation.
 <p align="right">
 
 Suite&nbsp;: <a href="#software">Ce qui ne va pas avec les
-logiciels</a>, ou pourquoi Finale n'est pas la panac&eacute;e en terme de
+logiciels</a>, ou pourquoi Finale n'est pas la panac&eacute;e en termes de
 logiciel de musique.
 </p><!--
     Translation of CVS Revision: 1.8 
@@ -287,7 +287,7 @@ corrig&eacute;es et subsiteront dans l'&eacute;dition d&eacute;finitive.
 <p>
 Cet exemple peut sembler quelque peu exag&eacute;r&eacute;, mais en r&eacute;alit&eacute; ce n'est
 pas le cas. Tous les grands producteurs de logiciel de notation
-pr&eacute;tendent se conformer au standards de la gravure, mais aucun d'eux
+pr&eacute;tendent se conformer aux standards de la gravure, mais aucun d'eux
 n'en ma&icirc;trise correctement les bases, et tous font des erreurs
 flagrantes. Pour juger du r&eacute;sultat de votre logiciel pr&eacute;f&eacute;r&eacute;,
 procurez-vous une partition convenable &eacute;dit&eacute;e par une bonne vieille
@@ -485,7 +485,7 @@ etc. sont donc inclus dans un groupe appel&eacute; &laquo;&nbsp;Voice context&nb
 les barres de mesures, etc. sont plac&eacute;es dans un groupe &laquo;&nbsp;Staff
 context&nbsp;&raquo; (<em>contexte de port&eacute;e</em>). Dans le cas d'une
 polyphonie, un contexte de port&eacute;e contient plusieurs contextes
-de voix. De m&ecirc;me, plusieurs contextes de port&eacute;es peuvent &ecirc;tre assembl&eacute;s dans un
+de voix. De m&ecirc;me, plusieurs contextes de port&eacute;e peuvent &ecirc;tre assembl&eacute;s dans un
 contexte de partition (&laquo;&nbsp;score context&nbsp;&raquo;)&nbsp;:
 </p>
 
@@ -519,7 +519,7 @@ sera plac&eacute; pour obtenir un r&eacute;sultat agr&eacute;able. Cet art est c
 <em>gravure musicale</em>. Ce terme vient du proc&eacute;d&eacute; traditionnel
 de l'impression musicale. Il y a encore quelques d&eacute;cennies, les 
 partitions &eacute;taient faites en taillant et ciselant la musique
-dans des plaques de zinc ou d'&eacute;tain, en inverse, comme dans un mirroir.
+dans des plaques de zinc ou d'&eacute;tain, en inverse, comme dans un miroir.
 Ces plaques &eacute;taient encr&eacute;es et les reliefs cr&eacute;&eacute;s par les poin&ccedil;ons et
 les d&eacute;coupes retenaient l'encre. La partition &eacute;tait alors r&eacute;alis&eacute;e
 en pressant le papier contre la plaque. D&eacute;coupes et poin&ccedil;ons &eacute;taient
@@ -655,7 +655,7 @@ Le processus de mise en forme d'une partition consiste &agrave; lire et
 &eacute;crire des variables d'objets.</li>
 
 
-<li> Certaines variables one valeur pr&eacute;d&eacute;finie. Par exemple,
+<li> Certaines variables ont une valeur pr&eacute;d&eacute;finie. Par exemple,
 l'&eacute;paisseur de nombreuses lignes &ndash; caract&eacute;ristiques d'un style
 typographique &ndash; est pr&eacute;&eacute;tablie. La changer entra&icirc;ne un
 changement du style typographique.
@@ -686,7 +686,7 @@ toute chose</a>&nbsp;: peut-on se contenter d'une architecture
 flexible&nbsp;?
 </p>
 <!--
-    Translation of CVS Revision: 1.8 
+    Translation of CVS Revision: 1.9 
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -863,7 +863,7 @@ blocs.
 
 <p>
 Les lignes suppl&eacute;mentaires pr&eacute;sentent des difficult&eacute;s typographiques.
-Des surcharges avec d'autres signes &ndash; d'autres lignes ou des alt&eacute;rations)
+Des surcharges avec d'autres signes &ndash;&nbsp;d'autres lignes ou des alt&eacute;rations&nbsp;&ndash;
 sont vite arriv&eacute;es. Les autres logiciels &eacute;vitent ces collisions en
 espa&ccedil;ant davantage les lignes, ce qui occupe plus de place, ou en
 raccourcissant les lignes suppl&eacute;mentaires, au d&eacute;triment de la lisibilit&eacute;.
@@ -900,7 +900,7 @@ Suite&nbsp;: <a href="#input-format">Utilise la Source, Luke</a>, ou&nbsp;:
 ce que LilyPond traite en entr&eacute;e.
 </p>
 <!--
-    Translation of CVS Revision: 1.7 
+    Translation of CVS Revision: 1.8 
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -1006,7 +1006,7 @@ sans ambigu&iuml;t&eacute;.
 </p>
 
 <p>
-Ce sont la syntaxe et l'interface utilisteur qui concernent les utilisateurs.
+Ce sont la syntaxe et l'interface qui concernent les utilisateurs.
 Elles sont sujettes &agrave; discussion, puisque relatives aux go&ucirc;ts de chacun.
 Bien que ces discussions soient int&eacute;ressantes, elles ne sont pas
 productives. &Agrave; l'&eacute;chelle de LilyPond, l'importance du format de saisie
