@@ -21,8 +21,7 @@
   <dd>
     Envoyez un courriel &agrave; 
     <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
-    (
-    <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>
+    (<a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>
     sur la liste, 
     <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archives</a>).
     <br>
