@@ -1,0 +1,84 @@
+<!--
+    Translation of CVS Revision: 1.26 
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
+
+<h2>Documentation en ligne</h2>
+
+<ul>
+
+  <li>
+    Documentation pour
+    <a href="@DOC@v2.6/Documentation/out-www/">
+      <b><font size="+1">
+	  LilyPond 2.6</font></b>
+    </a>
+    (stable)
+  </li>
+    <li>
+    Documentation pour
+    <a href="@DOC@v2.7/Documentation/out-www/">
+              <b>
+	  LilyPond 2.7</b>
+    </a>
+    (développement)
+  </li>
+  <li>
+    Documentation pour
+    <a href="@DOC@v2.4/Documentation/out-www/">
+      <b>LilyPond 2.4</b>
+    </a>
+  </li>
+  <li>
+    Documentation pour
+    <a href="@DOC@v2.2/Documentation/out-www/">
+      <b>LilyPond 2.2</b>
+    </a>
+  </li>
+  <li>
+    Documentation pour
+    <a href="@DOC@v2.0/Documentation/out-www/">
+      <b>LilyPond 2.0</b>
+    </a>
+    
+  </li>
+  <li>
+    Documentation pour
+    <a href="@DOC@v1.8/Documentation/out-www/">
+      <b>LilyPond 1.8</b></a>
+
+  </li>
+  <li>
+    Documentation pour
+    <a href="@DOC@v1.6/Documentation/out-www/">
+      <b>LilyPond 1.6</b>
+    </a>
+  </li>
+</ul>
+
+<h2><em>LilyPond Snippet Repository</em></h2>
+
+Le <a href="http://lsr.dsi.unimi.it/"><em>Lilypond Snippet
+Repository (LSR)</em></a> est une base de données de recherche d'extraits
+de code pour LilyPond. Les utilisateurs peuvent consulter, rechercher
+et contribuer en ajoutant leurs propres extraits de code.
+
+
+<h2>Documentation locale</h2>
+
+La documentation est installée dans le dossier
+<pre>
+  <a
+href="file:///usr/share/doc/lilypond/">/usr/share/doc/lilypond</a>
+</pre> Il se peut que vous ayez à installer un paquet additionnel tel
+que <tt>lilypond-doc</tt>.
+
+
+<h2>Support</h2>
+
+@contact.ihtml@
+
