@@ -1,3 +1,7 @@
+2005-09-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/documentation.html: new file
+
 2005-09-07  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/install/devel.ihtml: Update autopackage.
